# hengda_client

./: CMakeLists.txt  README.md  border.json  border.qrc  main.cpp  mysql.sql  setting.json  system.h  utils.h
cmake/: FindMySQL.cmake
db/: database.h
gui/: addcamerawindow.cpp  addcamerawindow.h  alarmwindow.cpp  alarmwindow.h  bordersloader.cpp  bordersloader.h  canvaswidget.cpp  canvaswidget.h  devicewidget.cpp  devicewidget.h  editmenu.cpp  editmenu.h  imageeditmenu.cpp  imageeditmenu.h  mainwindow.cpp  mainwindow.h  markwidget.cpp  markwidget.h  recordwidget.cpp  recordwidget.h  settingwidget.cpp  settingwidget.h  videotest.cpp  videotest.h
gui/widgets/: command.cpp  command.h  iconbutton.cpp  iconbutton.h  icontextbutton.cpp  icontextbutton.h  mainwidget.cpp  mainwidget.h  titlebar.cpp  titlebar.h
model/: alamservice.cpp  alarm.h  alarmservice.h  camera.h
network/: iptest.h  rpcclient.cpp  rpcclient.h  tcpclient.cpp  tcpclient.h  tcpclient2.cpp  tcpclient2.h
res/: mainwindow.qss  menu.qss  table.qss
